# benchmark-qed

./: .gitignore  404.html  CHANGELOG.md  README.md  _typos.toml  apm.yml  index.html  mkdocs.yaml  pr_body.md  pyproject.toml  ruff.toml
.apm/skills/benchmark-qed-autoe/: SKILL.md
.apm/skills/benchmark-qed-autoq/: SKILL.md
.apm/skills/benchmark-qed-configure/: SKILL.md
.apm/skills/benchmark-qed-question-quality/: SKILL.md
.apm/skills/benchmark-qed-setup/: SKILL.md
.github/agents/: DocsSpecialist.agent.md  Planner.agent.md  PythonDeveloper.agent.md  ReviewSpecialist.agent.md
.github/workflows/: gh-pages.yml  python-ci.yml  python-publish.yml  semver.yml
.semversioner/: 0.4.0.json
.semversioner/next-release/: minor-20250605185215488586.json  minor-20250609230738334497.json  minor-20250612163351923279.json  minor-20250625175807851431.json  minor-20251217232258224287.json  minor-20251219235819458131.json  minor-20260121185906993756.json  minor-20260324191654993255.json  minor-20260324191655063579.json  minor-20260324191655126294.json  minor-20260422214721711139.json  minor-20260424200912799025.json  minor-20260506063439936521.json  minor-20260512045848319966.json  minor-20260627073823450402.json  minor-20260710045900827493.json  patch-20250604141858053121.json  patch-20250604170406419058.json  patch-20250604183313182261.json  patch-20250619171054451699.json  patch-20250625175738691428.json  patch-20250626002641538698.json  patch-20250917154150573751.json  patch-20260324191655189110.json  patch-20260331184709807604.json  patch-20260408165516468204.json  patch-20260416202639992633.json  patch-20260418021846357630.json  patch-20260501174720978257.json  patch-20260622215607308688.json  patch-20260701074707822328.json
benchmark-UI/: README.md  index.html  package-lock.json  package.json
benchmark-UI/public/: presentation.html
benchmark-UI/scripts/: init-runner.mjs
benchmark-UI/src/: App.css  App.tsx  index.css  recentReports.ts  types.ts
benchmark-UI/src/components/: ActivityLogPanel.tsx  AddWorkspaceDialog.tsx  AddWorkspaceTabsDialog.tsx  BlobConnectDialog.tsx  CancelJobButton.tsx  CodeEditor.tsx  CopilotAskUserDialog.tsx  CopilotAuthBadge.tsx  CopilotElicitationDialog.tsx  CopilotPanel.tsx  CopilotPermissionDialog.tsx  CopyNodeDialog.tsx  CopyWorkspaceDialog.tsx  CsvViewer.tsx  DatasetDownloadDialog.tsx  EvaluateQuestionsPickerDialog.tsx  FileAccessPermissionDialog.tsx  FileEditor.tsx  FolderTree.tsx  InitJobsBottomTab.tsx  JobsPanel.tsx  (+15 more)
benchmark_qed/: __init__.py  __main__.py  storage_compat.py
benchmark_qed/autoe/: __init__.py  assertion_scores.py  cli.py  config.py  pairwise_scores.py  prompts.py  retrieval_scores.py  score.py
benchmark_qed/autoq/: cli.py  config.py
benchmark_qed/cli/: autoe_cli.py  config_resolver.py  init_config.py  interactive.py  scaffold.py  yaml_renderer.py
benchmark_qed/config/: defaults.py  llm_config.py  prompt_config.py  utils.py
benchmark_qed/data/: cli.py
benchmark_qed/llm/: __init__.py  factory.py
benchmark_qed/ui/: __init__.py  __main__.py  compare_app.py  compare_app.tcss
cli/autoe/: index.html
cli/autoq/: index.html
cli/config_init/: index.html
cli/data/: index.html
cli/llm_config/: index.html
cli/retrieval_scores/: index.html
copilot-bridge/: README.md  package-lock.json  package.json
copilot-bridge/src/: copilotManager.mjs  pendingRequests.mjs  server.mjs  sseBus.mjs
datasets/: index.html
developing/: index.html
docs/: datasets.md  developing.md  index.md
docs/cli/: autoe.md  autoq.md  config_init.md  data.md  llm_config.md  retrieval_scores.md
docs/notebooks/: 11a_hierarchical_chunking.ipynb  11b_autoq_data_questions_podcast.ipynb  11d_mmr_sampling.ipynb  11e_autoe_reference_scoring.ipynb  11f_autoq_global_questions.ipynb  assertion_gen.ipynb  autod.ipynb  autoe.ipynb  autoe_assertion.ipynb  autoq.ipynb  data_entity_question_gen.ipynb  retrieval_eval.ipynb  retrieval_metrics.ipynb
example_notebooks/: autod.ipynb  autoe.ipynb  autoq.ipynb
notebooks/assertion_gen/: index.html
notebooks/autod/: index.html
notebooks/autoe/: index.html
notebooks/autoq/: index.html
notebooks/retrieval_metrics/: index.html
scripts/: semver-check.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_config_resolver.py  test_init_config_cli.py  test_interactive_init.py  test_load_config.py  test_load_config_cli_patterns.py  test_load_config_integration.py  test_storage_compat.py
(+285 files in other folders)
