[project]
name = "benchmark-qed"
dynamic = ["version"]
description = "BenchmarkQED: Automated benchmarking of retrieval-augmented generation (RAG) systems"
authors = [
    {name = "Andrés Morales Esquivel", email = "andresmor@microsoft.com"},
    {name = "Darren Edge", email = "daedge@microsoft.com"},
    {name = "Ha Trinh", email = "trinhha@microsoft.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.25.3",
    "nest-asyncio>=1.6.0",
    "fastparquet>=2026.5.0",
    "json-repair>=0.61.1",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scikit-posthocs>=0.14.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tiktoken>=0.13.0",
    "typer>=0.26.8",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "graphrag-common>=3.1.0",
    "graphrag-input>=3.1.0",
    "graphrag-storage>=3.1.0",
    "graphrag-llm>=3.1.0"
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "mkdocs-material>=9.7.6",
    "poethepoet>=0.47.0",
    "pyright>=1.1.411",
    "nest-asyncio>=1.6.0",
    "py7zr>=1.1.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "psutil>=7.2.2",
    "ruff>=0.15.20",
    "uv-dynamic-versioning>=0.14.0",
    "typos>=1.48.0",
    "mkdocs-jupyter>=0.26.3",
    "mkdocs-exclude-search>=0.6.6",
    "mkdocs-typer2>=0.4.1",
    "semversioner>=3.0.1",
    "nbqa>=1.9.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project.scripts]
benchmark-qed = "benchmark_qed.__main__:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv]
# graphrag-llm strict-pins an older litellm, but its source imports
# AnthropicThinkingParam which only exists in litellm>=1.84. Override until
# the upstream pin is relaxed.
override-dependencies = ["litellm>=1.84.0"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
pattern-prefix = "release/"
metadata = false

[tool.poe.tasks]
_sort_imports = "ruff check --select I --fix . --preview"
_ruff_check = 'ruff check . --preview'
_format_code = "ruff format  . --preview"
_format_check = 'ruff format . --check --preview'
_check_typos = 'typos .'
_typecheck_notebooks = 'nbqa pyright docs/notebooks'
typecheck = "pyright"
check_notebooks = [
    '_typecheck_notebooks',
]
check_package_types = "pyright --verifytypes benchmark_qed --ignoreexternal"
check = [
    '_check_typos', 
    '_format_check', 
    '_ruff_check', 
    'typecheck', 
    'check_notebooks',
    'check_package_types', 
]
fix = "ruff check --fix ."
fix_unsafe = "ruff check --preview --fix --unsafe-fixes ."
format = ['_sort_imports', '_format_code']
test = "pytest tests"
test_fast = "pytest tests -m 'not slow'"
serve_docs = "mkdocs serve"
build_docs = "mkdocs build"

_test_with_coverage = 'coverage run --source=benchmark_qed -m pytest tests'
_coverage_report = 'coverage report --fail-under=100 --show-missing --omit="benchmark_qed/doc_gen/__main__.py"'
_generate_coverage_xml = 'coverage xml --omit="benchmark_qed/doc_gen/__main__.py"'
_generate_coverage_html = 'coverage html --omit="benchmark_qed/doc_gen/__main__.py"'
test_coverage = [
    '_test_with_coverage',  
    '_generate_coverage_xml',
    '_generate_coverage_html',
    '_coverage_report'
]
test_only = "pytest -v -k"

_semversioner_release = "semversioner release"
semversioner_add = "semversioner add-change"

[[tool.poe.tasks.pypi_release]]
shell = """
git checkout main
git pull
git tag release/v$(semversioner current-version)
"""

[[tool.poe.tasks._semversioner_changelog]]
cmd = "semversioner changelog"
capture_stdout = "CHANGELOG.md"

[[tool.poe.tasks.semver_release]]
sequence = [
    '_semversioner_release',
    '_semversioner_changelog',
]

# https://github.com/microsoft/pyright/blob/9f81564a4685ff5c55edd3959f9b39030f590b2f/docs/configuration.md#sample-pyprojecttoml-file
[tool.pyright]
include = ["benchmark_qed", "tests", "docs/notebooks"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
tmp_path_retention_policy = "failed"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
